@@ -8,7 +8,8 @@
             - Disabled by default.
         - Highlight multiple selected rows (#287,#293)
         - Dmenu can read from file instead of stdin.
-		- Regex matching (#113)
+        - Regex matching (#113)
+        - Take Screenshot of rofi using keybinding.
     Improvements:
         - Update manpage (#289, #291)
         - Improve speed of reading stdin in dmenu mode.
